# embedded-fatfs

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
block-device-adapters/src/: buf_stream.rs  stream_slice.rs
embedded-fatfs/: Cargo.toml
embedded-fatfs/src/: boot_sector.rs  dir.rs  dir_entry.rs  file.rs  fs.rs  table.rs
embedded-partitions/: Cargo.toml  LICENSE-MIT  README.md
embedded-partitions/examples/: detect.rs  inspect.rs  make_disk_image.rs  mount_partition.rs  multi_partition.rs
embedded-partitions/src/: lib.rs
embedded-partitions/src/mbr/: entry.rs  error.rs  mod.rs  parse.rs
examples/esp-spi/: Cargo.toml  README.md
examples/esp-spi/.cargo/: config.toml
examples/esp-spi/src/: main.rs
