[package]
name = "embedded-partitions"
version = "0.1.0"
edition = "2024"
readme = "README.md"
rust-version = "1.85"
repository = "https://github.com/mabezdev/embedded-fatfs"
keywords = ["mbr", "partition", "no_std", "block", "filesystem"]
categories = ["filesystem", "no-std", "embedded"]
license = "MIT"
description = """
Partition-table parsing (Master Boot Record) for embedded devices,
designed to interoperate with block-device-adapters and embedded-fatfs.
"""

[dependencies]
embedded-io-async = "0.7.0"
block-device-adapters = { version = "0.2", path = "../block-device-adapters" }

log = { version = "0.4", optional = true }
defmt = { version = "0.3", optional = true }

[dev-dependencies]
env_logger = "0.9"
tokio = { version = "1", default-features = false, features = ["fs", "rt-multi-thread", "macros", "io-util"] }
anyhow = "1"
embedded-io-adapters = { version = "0.7", package = "embedded-io-adapters", features = ["tokio-1"] }
embedded-fatfs = { version = "0.1", path = "../embedded-fatfs", features = ["std", "alloc"] }

[features]
default = []
log = ["dep:log"]
defmt = ["dep:defmt"]
