[package]
name = "esp-spi"
version = "0.1.0"
authors = ["Scott Mabin <scott@mabez.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
cfg-if = "1"
embassy-executor = "0.10.0"
embassy-time = "0.5.0"
embedded-hal-async = "1"
embedded-hal-bus = { version = "0.3", features = ["async"] }
embedded-io-async = "0.6"
esp-backtrace = { version = "0.19.0", features = ["panic-handler", "println"] }
esp-bootloader-esp-idf = "0.5.0"
esp-hal = { version = "1.1.0", features = ["log-04", "unstable"] }
esp-rtos = { version = "0.3.0", features = ["embassy", "log-04"] }
esp-println = { version = "0.17.0", features = ["log-04"] }
log = "0.4"

sdspi = { version = "0.1.0", path = "../../sdspi", features = ["log"] }
aligned = "0.4.2"
block-device-adapters = { version = "0.2.0", path = "../../block-device-adapters" }
embedded-fatfs = { version = "0.1.0", path = "../../embedded-fatfs", default-features = false, features = ["log"] }

[features]
esp32 = ["esp-hal/esp32", "esp-rtos/esp32", "esp-backtrace/esp32", "esp-bootloader-esp-idf/esp32"]
esp32c2 = ["esp-hal/esp32c2", "esp-rtos/esp32c2", "esp-backtrace/esp32c2", "esp-bootloader-esp-idf/esp32c2"]
esp32c3 = ["esp-hal/esp32c3", "esp-rtos/esp32c3", "esp-backtrace/esp32c3", "esp-bootloader-esp-idf/esp32c3"]
esp32c5 = ["esp-hal/esp32c5", "esp-rtos/esp32c5", "esp-backtrace/esp32c5", "esp-bootloader-esp-idf/esp32c5"]
esp32c6 = ["esp-hal/esp32c6", "esp-rtos/esp32c6", "esp-backtrace/esp32c6", "esp-bootloader-esp-idf/esp32c6"]
esp32c61 = ["esp-hal/esp32c61", "esp-rtos/esp32c61", "esp-backtrace/esp32c61", "esp-bootloader-esp-idf/esp32c61"]
esp32h2 = ["esp-hal/esp32h2", "esp-rtos/esp32h2", "esp-backtrace/esp32h2", "esp-bootloader-esp-idf/esp32h2"]
esp32s2 = ["esp-hal/esp32s2", "esp-rtos/esp32s2", "esp-backtrace/esp32s2", "esp-bootloader-esp-idf/esp32s2"]
esp32s3 = ["esp-hal/esp32s3", "esp-rtos/esp32s3", "esp-backtrace/esp32s3", "esp-bootloader-esp-idf/esp32s3"]

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
